--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             position: absolute;
             right: 20px;
             top: 20px;
+            display: flex;
+            align-items: center;
         }
         .slider-button {
             background-color: #ddd;
@@ -44,6 +46,7 @@
             position: relative;
             cursor: pointer;
             outline: none;
+            margin-left: 10px;
         }
         .slider-button::before {
             content: "";
@@ -225,14 +228,9 @@
         generateSemesterSections(6);
 
         // Example usage of adding file links to semesters
-        addFileToSemester(1, 'Introduction to Programming');
-        addFileToSemester(2, 'Data Structures and Algorithms');
-        addFileToSemester(3, 'Database Systems');
-        addFileToSemester(4, 'Operating Systems');
-        addFileToSemester(5, 'Computer Networks');
-        addFileToSemester(6, 'Artificial Intelligence');
-
-
+        // addFileToSemester(1, 'Introduction to Programming');
+        // addFileToSemester(2, 'Data Structures and Algorithms');
+        
     </script>
 </body>
 </html>
