--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
         <h2>Warum das ganze?</h2>
         <p>Die Bedeutung von Übungsmaterialien für die Prüfungsvorbereitung ist unumstritten. Im Studiengang BCSM fehlt jedoch bisher eine zentrale Anlaufstelle für diese Ressourcen. Dies liegt zum Teil daran, dass der Studiengang relativ neu ist und somit nur begrenzt auf solche Materialien zurückgegriffen werden kann.</p>
         <p>Der Austausch von Übungsmaterialien ist kaum zu kontrollieren. Dies führt zu einem unfairen Vorteil für Studierende, die durch Kontakte Zugang zu solchen Ressourcen haben.</p>
-        <p>Auf dieser Seite werden ausschließlich selbst erstellte Mitschriften aus Vorlesungen, Übungen und Probeklausuren bzw. Gedankenprotokolle gehostet.</p>
+        <p>Auf dieser Seite werden ausschließlich selbst erstellte Mitschriften aus Vorlesungen, Übungen und Probeklausuren bzw. Gedankenprotokolle gehostet. Die Quellen sind dabei anzugeben. Urheberrechte sollen besonderen Schutz gewährt werden. </p>
         <h2>Mitmachen</h2>
         <p>Wenn Sie Materialien haben, die Sie teilen möchten, können Sie sie gerne an uns senden. Wir werden sie überprüfen und, wenn sie den Richtlinien entsprechen, auf dieser Seite veröffentlichen.</p>
         <p>Hier ist der Link zur <a href="mailto:bcsm-materialsammlung@tech.com">E-Mail</a>.</p>
         <h2>Für Dozenten</h2>
-        <p>Es kann passieren, dass Materialien, die auf dieser Seite veröffentlicht werden, urheberrechtlich geschützt sind, wenn diese weitergeleitet werden und nicht ausreichend gekennzeichnet sind. Wenn Sie Dozent sind und feststellen, dass Ihre Materialien unerlaubt auf dieser Seite veröffentlicht wurden, können Sie uns gerne kontaktieren.</p>
+        <p>Es kann passieren, dass Materialien, die auf dieser Seite veröffentlicht werden, urheberrechtlich geschützt sind, wenn diese weitergeleitet werden und nicht ausreichend gekennzeichnet sind. Wenn Sie Dozent sind und feststellen, dass Ihre Materialien unerlaubt und unerwünscht auf dieser Seite veröffentlicht wurden, können Sie uns gerne kontaktieren.</p>
         <p><b>Wir werden sie dann umgehend entfernen.</b></p>
         <p>Wenn Sie selbst Materialien haben, die gerne teilen möchten, freuen wir uns über eine Nachricht.</p>
         <h3>Haftungsausschluss</h3>
@@ -230,6 +230,8 @@
         // Example usage of adding file links to semesters
         // addFileToSemester(1, 'Introduction to Programming');
         // addFileToSemester(2, 'Data Structures and Algorithms');
+        addFileToSemester(2, 'BCSM-201 Probeklausuren', 'BCSM-201-PKFRAGEN.pdf');
+
         
     </script>
 </body>
