--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <p> Klicke auf den Link um mehr zu erfahren</p>
     <p> Viel Spaß!</p>
     <ul>
-        <li><a href="#blog\dslit+mcserver">Blogeintrag 1: DSLite und Minecraft-Server: So löst du die Herausforderung </a></li>
+        <li><a href="#blog/dslit+mcserver">Blogeintrag 1: DSLite und Minecraft-Server: So löst du die Herausforderung </a></li>
     </ul>
 </section>
 
