--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <p> Klicke auf den Link um mehr zu erfahren</p>
     <p> Viel Spaß!</p>
     <ul>
-        <li><a href="#blog/dslit+mcserver">Blogeintrag 1: DSLite und Minecraft-Server: So löst du die Herausforderung </a></li>
+        <li><a href="blog/dslit+mcserver.html">Blogeintrag 1: DSLite und Minecraft-Server: So löst du die Herausforderung </a></li>
     </ul>
 </section>
 
@@ -156,7 +156,7 @@
     <h2>Bachelor of Science CSM</h2>
     <p> Hier findet man Lernmaterialien zum Studiengang BCSM</p>
     <ul>
-        <li><a href="#materials">Lernmaterial BCSM</a></li>
+        <li><a href="materials.html">Lernmaterial BCSM</a></li>
     </ul>
 </section>
 
